# DNVT-Flashpoint

./: .gitignore  README.md  audio_bridge.py  call_manager.py  config.py  cvsd_codec.py  dnvt_bridge_py.py  dnvt_monitor.py  dnvt_sip.py  gui.py  run.bat  sip_bridge.py  sip_extensions.ini.example  usb_protocol.py
cvsd_codec/: CMakeLists.txt  cvsd_codec.cpp  cvsd_codec.h
dnvt_bridge/: build.bat  dnvt_bridge.cpp  dnvt_bridge.h
